--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -98,3 +98,11 @@ source = ~/.config/hypr/animations.conf
 source = ~/.config/hypr/keybindings.conf
 source = ~/.config/hypr/rules.conf
 source = ~/.config/hypr/theme.conf
+
+
+source=~/.config/hypr/custom/env.conf
+source=~/.config/hypr/custom/execs.conf
+source=~/.config/hypr/custom/general.conf
+source=~/.config/hypr/custom/rules.conf
+source=~/.config/hypr/custom/keybinds.conf
+
